--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,5 +2,7 @@
     "name": "Budget App",
     "short_name": "Budget App",
     "theme_color": "#ffffff",
-    "background_color": "#ffffff"
+    "background_color": "#ffffff",
+    "start_url": "/",
+    "display": "standalone"
 }
